Fix overflow and parallax issues

--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -33,4 +33,5 @@
 @mixin sectionLayout(){
   min-height: 100vh;
   box-sizing: border-box;
+  overflow: hidden;
 }
